Added more comments to the code and an error state in case FreeRTOS gets out of RAM

--- a/blinky_freertos/armgcc/Makefile
+++ b/blinky_freertos/armgcc/Makefile
@@ -56,6 +56,7 @@ INC_FOLDERS += \
   $(SDK_ROOT)/modules/nrfx/mdk \
   $(PROJ_DIR) \
   $(SDK_ROOT)/components/libraries/timer \
+  $(SDK_ROOT)/components/libraries/delay \
   $(SDK_ROOT)/components/libraries/strerror \
   $(SDK_ROOT)/components/toolchain/cmsis/include \
   $(SDK_ROOT)/external/freertos/source/include \
